--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
         <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
+        <script>
+            window.botpressWebChat.init({
+              host: "https://3300-2804-21b4-8190-f0-5d13-88d4-e760-9667.sa.ngrok.io",
+              botId: "bot-bt1546",
+            })
+          </script>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
